# Yma-Mitacs-Global-Link-UCalgary

./: CMakeLists.txt  Dockerfile  README.md  WhatIHaveDone.md  bash_aliases.txt  cheatsheet.md  joint_positions.csv  package.xml
Policy/Exported policies/: narrow-full-success.onnx
Policy/Exported_policies/: climb_final-climb.onnx  crouch-heading-corrected-2.onnx  flat_pushing_pt2.onnx  rough_fixed-slope-2.onnx
Policy/obs_act_targ_pos_3/: obs_actions_targets_pos_3.csv
SimpleTurn/: SimpleTurn.ino
arduino/Controlling_Motors/: Controlling_Motors.ino
arduino/FullReplacement/: FullReplacement.ino
arduino/easy_ros/: easy_ros.ino
config/: elevation_mapping_ouster.yaml  grid_map_visualization.yaml  ros_control.yaml
data/: Working_Motor_Performance_Analysis_14.xlsx  joint_positions (one point low).csv
florant/f_quadruped_control/: CMakeLists.txt  package.xml  setup.py
florant/f_quadruped_control/config/: control.yaml  policies.yaml
florant/f_quadruped_control/launch/: bringup_rl.launch  gazebo.launch  spawn_control.launch
florant/f_quadruped_control/log/: .~lock.policy_log_20260723_223512.csv#  policy_log_20260723_201223.csv  policy_log_20260723_202456.csv  policy_log_20260723_203327.csv  policy_log_20260723_203746.csv  policy_log_20260723_204240.csv  policy_log_20260723_204344.csv  policy_log_20260723_204911.csv  policy_log_20260723_212315.csv  policy_log_20260723_212956.csv  policy_log_20260723_213457.csv  policy_log_20260723_215949.csv  policy_log_20260723_221947.csv  policy_log_20260723_222436.csv  policy_log_20260723_223512.csv
florant/f_quadruped_control/meshes/: FL_FOOT.STL  FL_LOWER_LEG.dae  FL_SHOULDER.dae  FL_UPPER_LEG.STL  FL_UPPER_LEG.dae  FR_LOWER_LEG.STL  FR_SHOULDER.dae  HL_FOOT.dae  HL_LOWER_LEG.dae  HL_SHOULDER.STL  HL_UPPER_LEG.STL  HL_UPPER_LEG.dae  HR_SHANK.STL  HR_SHANK.dae  HR_SHOULDER.STL  HR_SHOULDER.dae  HR_UPPER_LEG.dae
florant/f_quadruped_control/scripts/: policy_node.py  quadruped_fake_obs_datas.py  quadruped_switch_policy_node.py
florant/f_quadruped_control/src/: observations_actions_flat_1_cut.csv
florant/f_quadruped_control/urdf/: ContinuO_lidar.xacro  gazebo.xacro  legs.xacro  materials.xacro  sensors.xacro  transmissions.xacro
florant/f_quadruped_monitoring/: CMakeLists.txt  package.xml
florant/f_quadruped_real/: CMakeLists.txt  package.xml
joschka/: Dockerfile  LICENSE  WhatIHaveDone.md  cheatsheet.md
joschka/Policy/: policy_obs_log.csv
joschka/config/: policies.yaml  (+1 more)
launch/: elevation_flat_mapping.launch  elevation_mapping.launch  mitacs_ouster.launch  quadruped_rl_control.launch
luis/quadruped_control/: CMakeLists.txt  package.xml  setup.py
luis/quadruped_control/config/: policies.yaml
luis/quadruped_control/launch/: bringup_rl.launch
luis/quadruped_control/policies/: flat_noise_test_policy.onnx  rough_fixed_slope.onnx
luis/quadruped_control/scripts/: config.py  index_probe.py  joint_commander.py  observation.py  policy_node_old.py  policy_node_onnx.py  policy_node_torch.py  policy_to_controllers.py
scripts/: elevation_mapper.py  rl_controller.py  rl_grid_extractor.py
(+96 files in other folders)
